[tool.poetry]
name = "mx-robot-library"
version = "0.1.3"
description = "MX Robot Library"
license = "GPL-3.0-or-later"
authors = ["MX3 Team"]

[[tool.poetry.source]]
name = "cachedpypi"
url = "https://pypi.asci.synchrotron.org.au/root/pypi/+simple"
priority = "default"

[[tool.poetry.source]]
name = "asciprod"
url = "https://pypi.asci.synchrotron.org.au/asci/prod/+simple"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pydantic = "^1.10.7"
typing-extensions = "^4.5.0"
cachetools = "^5.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.1"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pylint = "2.17.4"
autopep8 = "^2.0.2"
Sphinx = "6.2.1"
sphinx-rtd-theme = "1.2.0"
alabaster = "0.7.13"
autodoc-pydantic = "1.8.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
