[tool.poetry]
name = "mx-robot-library"
version = "0.1.4"
description = "MX Robot Library"
license = "GPL-3.0-or-later"
authors = ["MX3 Team"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = ">=1.10.13,<2.0.0"
typing-extensions = ">=4.8.0"
cachetools = ">=5.3.2,<6.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.5.0,<4.0.0"
pytest = ">=7.4.3,<8.0.0"
pytest-cov = ">=4.1.0,<5.0.0"
pytest-html = ">=4.0.2,<5.0.0"
pylint = ">=3.0.2,<4.0.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
