[tool.poetry]
name = "mx-robot-library"
version = "0.2.5"
description = "MX Robot Library"
license = "GPL-3.0-or-later"
authors = ["MX3 Team"]
maintainers = ["Jacob Oldfield <oldfielj@ansto.gov.au>"]

[[tool.poetry.source]]
name = "cachedpypi"
url = "https://pypi.asci.synchrotron.org.au/root/pypi/+simple"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = ">=2.8.2,<3.0.0"
pydantic-settings = ">=2.4.0"
typing-extensions = ">=4.6.1"
cachetools = ">=5.3.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "3.7.1"

[tool.black]
line-length = 88
target_version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pyright]
ignore = ["**/typing_extensions.py"]
pythonVersion = "3.9"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
extend-select = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
